radware/slavau/day2/ingress-lab/canary.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-v1
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "30"

spec:
  ingressClassName: nginx
  rules:
  - host: animals.52.48.57.235.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
             name: bear-svc
             port:
                number: 80


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-v2

spec:
  ingressClassName: nginx
  rules:

  - host: animals.52.48.57.235.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
             name: moose-svc
             port:
                number: 80
